--- a/src/main/webapp/uii/template/css/src/pages/_style-guide.scss
+++ b/src/main/webapp/uii/template/css/src/pages/_style-guide.scss
@@ -26,7 +26,7 @@
 
   .description {
     font-size: 1.25rem;
-    color: var(--clr-neutral-400);
+    color: var(--clr-neutral-600);
   }
   section.colors {
     display: grid;
